辅助插件：spotless 代码格式化修复、checkstyle 代码格式化检查